# MIPT_BuildSystems

./: README.md
1/: .gitignore  CMakeLists.txt
1/A/: CMakeLists.txt  index.h  preparing.py
1/B/: CMakeLists.txt  lib.cpp  lib.h
1/C/: CMakeLists.txt  main.cpp  main.h  tests.cpp  tests.h
2/: Dockerfile
3/: CMakeLists.txt  toolchain-arm.cmake
4/: .gitignore  CMakeLists.txt  README.md  generate_mapping.py  main_codegenerated.cpp  main_standard.cpp
